tests/shaders/fail/parser/missing_import/main.ksl
import Missing.Library as Missing

shader MissingImport {
    vertex {
        function entry() {
            return
        }
    }
}
